--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 version: 1.0.{build}
-image: Previous Visual Studio 2019
+image: Visual Studio 2017
 configuration: Release
 pull_requests:
   do_not_increment_build_number: true
